2008-01-02  GESTES Cedric  <gestes_c@epita.fr>

	* src/Makefile.am (-DMY_APPLET_DOCK_VERSION): added define

	* Makefile.am: added changelog

