@@ -30,6 +30,8 @@ CD_APPLET_ABOUT_H
 
 CD_APPLET_ON_CLICK_H
 
+CD_APPLET_ON_MIDDLE_CLICK_H
+
 CD_APPLET_ON_BUILD_MENU_H
 
 
